Fixed css issue causing clock controls to jump around when hovering

--- a/client/src/components/ControlPanel/PresetControl/ClockControls/ClockControls.scss
+++ b/client/src/components/ControlPanel/PresetControl/ClockControls/ClockControls.scss
@@ -18,7 +18,8 @@
         }
 
         &:hover {
-            border-width: 0.3em;
+            // border-width: 0.3em;
+            box-shadow: inset var(--particle-lighter) 0 0 0 0.3em;
         }
 
         &.attached {
